🛰  - Fix spacing and responsive on rotator element

--- a/assets/scss/components/_rotator.scss
+++ b/assets/scss/components/_rotator.scss
@@ -11,6 +11,11 @@
   font-weight: 200;
   font-size: 1rem;
   text-transform: uppercase;
+
+  display: none;
+  @include screen(lg) {
+    display: block;
+  }
   &--left {
     left: -50vw;
   }
